Fix overflow div on big screen

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -500,7 +500,7 @@ p{
 		url('') !important;
 }
 .site-cover-secondary{
-	width: 100vw;
+	width: 100%;
 	z-index: 0;
 	background-position: center;
 	background-repeat: no-repeat;
